<resources>
    <string name="app_name">Agora Android GSoC20</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="elections">Elections</string>
    <string name="total_elections">Total Elections</string>
    <string name="_0">0</string>
    <string name="finished_elections">Finished Elections</string>
    <string name="pending_elections">Pending Elections</string>
    <string name="active_elections">Active Elections</string>
    <string name="dashboard">Dashboard</string>
    <string name="active">ACTIVE</string>
    <string name="dummy_elections">Dummy Elections</string>
    <string name="starts_at">Starts At :</string>
    <string name="fri_jan_24_12_00_04">Fri Jan 24 12:00:04</string>
    <string name="fri_mar_17_17_09_00">Fri Mar 17 17:09:00</string>
    <string name="ends_at">Ends At :</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_ut_aliquam">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam</string>
    <string name="skip">skip</string>
    <string name="agora">Agora</string>
    <string name="app_description">Android Application for Agora Web that uses Agora: An Electronic Voting Library implemented in Scala. This application uses Agora Web API as backend application</string>
    <string name="have_an_account_login">Have an Account? Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="continue_with_facebook">Continue with Facebook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name_optional">Last Name (Optional)</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SIGNUP</string>
    <string name="agora_example_com">agora@example.com</string>
    <string name="tushar_singh">Tushar Singh</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="manage_elections">Manage Elections</string>
    <string name="delete_account">Delete Account</string>
    <string name="log_out">Log out</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="create_election">Create Election</string>
    <string name="proceed">Proceed</string>
    <string name="end_date">End Date</string>
    <string name="enter_name_of_election">Enter Name Of Election</string>
    <string name="election_description">Election Description</string>
    <string name="start_date">Start Date</string>
    <string name="election_details">Election Details</string>
    <string name="date_picker">Date Picker</string>
    <string name="_1_3">1 / 3</string>
    <string name="information">Information</string>
    <string name="upload_candidates">Upload Candidates</string>
    <string name="_2_3">2 / 3</string>
    <string name="add">Add</string>
    <string name="enter_candidate_name">Enter Candidate Name</string>
    <string name="candidates">Candidates</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="bin">bin</string>
    <string name="get_real_time_results">Get Real Time Results</string>
    <string name="invite_voters">Invite Voters</string>
    <string name="only_me">Only me</string>
    <string name="everyone_with_access_to_election">Everyone with access to election</string>
    <string name="ballots_are_completely_secret">Ballots are completely secret</string>
    <string name="ballots_visible_only_to_me">Ballots visible only to me</string>
    <string name="ballots_visible_to_everyone">Ballots visible to everyone</string>
    <string name="who_can_see_the_list_of_voters">Who can see the list of voters</string>
    <string name="how_secret_are_ballots">How secret are ballots</string>
    <string name="some_more_options">Some more options</string>
    <string name="_3_3">3 / 3</string>
    <string name="ok">OK</string>
    <string name="tushar_28">Tushar@28</string>
    <string name="tushar_289">tushar@28</string>
</resources>
