<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:background="@color/grey_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.profile.ProfileFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/size_30dp">

            <RelativeLayout
                android:id="@+id/relative_layout"
                android:background="@drawable/white_corner_background"
                android:padding="@dimen/size_20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/logo_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="@dimen/size_75dp"
                    app:cardElevation="@dimen/size_8dp">

                    <ImageView
                        android:contentDescription="@string/agora"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_agora_logo" />


                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_email_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_below="@+id/logo_card"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:textSize="@dimen/size_18sp"
                    android:text="@string/agora_example_com"/>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_below="@+id/tv_email_id"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:textSize="@dimen/size_18sp"
                    android:text="@string/tushar_singh"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name"
                    style="@style/ButtonStyle"
                    android:text="@string/edit_profile"
                    android:layout_marginStart="@dimen/size_10dp"
                    android:layout_marginEnd="@dimen/size_10dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/size_10dp"/>
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WhiteButtonStyle"
                android:layout_marginTop="@dimen/size_30dp"
                android:layout_below="@+id/relative_layout"
                android:text="@string/change_password"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_delete_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WhiteButtonStyle"
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_below="@+id/btn_change_password"
                android:text="@string/delete_account"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WhiteButtonStyle"
                android:layout_marginTop="@dimen/size_20dp"
                android:layout_below="@+id/btn_delete_account"
                android:text="@string/log_out"
                />


        </RelativeLayout>



    </RelativeLayout>

</layout>