<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="election"
            type="com.example.agoraandroidgsoc20.data.model.Election" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            android:elevation="@dimen/size_5dp"
            app:cardCornerRadius="@dimen/size_4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/size_8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="@string/dummy_elections"
                        android:text="@{election.name}"
                        android:textSize="@dimen/size_24sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/size_22dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/corner_radius_5"
                        android:backgroundTint="@color/active_elections"
                        android:gravity="center"
                        android:hint="@string/active"
                        android:text="@{election.status}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_12sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="@dimen/size_24sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{election.desc}"
                    android:hint="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_ut_aliquam"
                    android:textSize="@dimen/size_18sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/starts_at"
                        android:textSize="@dimen/size_18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@{election.startsAt}"
                        android:hint="@string/fri_mar_17_17_09_00"
                        android:textStyle="bold"
                        android:textSize="@dimen/size_18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ends_at"
                        android:textSize="@dimen/size_18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@{election.endsAt}"
                        android:hint="@string/fri_mar_17_17_09_00"
                        android:textStyle="bold"
                        android:textSize="@dimen/size_18sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>