<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.createElections.UploadElectionDetailsFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_enter_details_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/election_details"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:paddingStart="@dimen/size_10dp"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"

                />
            <TextView
                android:id="@+id/tv_page_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/_1_3"
                android:layout_toEndOf="@+id/tv_enter_details_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_election_name"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/enter_name_of_election"
                app:boxStrokeColor="@color/colorPrimary"
                android:layout_below="@+id/tv_enter_details_label"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_election_description"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_110dp"
                android:layout_marginTop="24dp"
                android:clickable="false"
                android:hint="@string/election_description"
                app:boxStrokeColor="@color/colorPrimary"
                android:layout_below="@+id/til_election_name"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/ic_drop_down"
                android:id="@+id/spinner_algorithm"
                android:layout_below="@id/til_election_description">
            </Spinner>

            <ImageView
                android:id="@+id/iv_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/til_election_description"
                android:layout_toEndOf="@+id/spinner_algorithm"
                android:contentDescription="@string/information"
                android:foregroundGravity="center"
                android:src="@drawable/ic_info" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_start_date"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_24dp"
                android:hint="@string/start_date"
                app:boxStrokeColor="@color/colorPrimary"
                android:layout_toStartOf="@+id/iv_start_date"
                android:layout_below="@id/spinner_algorithm"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/iv_start_date"
                android:layout_marginTop="33dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/spinner_algorithm"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/information"
                android:src="@drawable/ic_calender_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_end_date"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_24dp"
                android:hint="@string/end_date"
                app:boxStrokeColor="@color/colorPrimary"
                android:layout_toStartOf="@+id/iv_start_date"
                android:layout_below="@id/til_start_date"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/iv_end_date"
                android:layout_marginTop="33dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/til_start_date"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/information"
                android:src="@drawable/ic_calender_icon" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/btn_proceed"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/size_64dp"
                android:text="@string/proceed"
                android:layout_below="@+id/til_end_date"
                />

        </RelativeLayout>
    </ScrollView>

</layout>